# wdl-fab

./: .gitignore  CMakeLists.txt  HOWTO.txt  README.txt  backup.command  cleanup_build.sh  cleanup_indent.sh  cmake_vs2010.cmd  cmake_vs2013.cmd  common.props  common.xcconfig  exclude.txt  tarball.command  tarball.sh  wdl-fab-todo.txt
AAX_SDK/: CMakeLists.txt
IPlugExamples/: CMakeLists.txt
IPlugExamples/IPlugChunks/: CMakeLists.txt  IPlugChunks-aax.vcxproj.filters  IPlugChunks-rtas.vcxproj.filters  IPlugChunks-vst2.vcxproj.filters  IPlugChunks-vst3.vcxproj.filters  IPlugChunks.cpp  IPlugChunks.h  resource.h
IPlugExamples/IPlugChunks/app_wrapper/: app_main.h
IPlugExamples/IPlugControls/: CMakeLists.txt  IPlugControls-aax.vcxproj.filters  IPlugControls-rtas.vcxproj.filters  IPlugControls-vst2.vcxproj.filters  IPlugControls-vst3.vcxproj.filters  IPlugControls.cpp  IPlugControls.h  resource.h
IPlugExamples/IPlugControls/app_wrapper/: app_dlg_main.cpp
IPlugExamples/IPlugConvoEngine/: CMakeLists.txt  IPlugConvoEngine-aax.vcxproj.filters  IPlugConvoEngine-rtas.vcxproj.filters  IPlugConvoEngine-vst2.vcxproj.filters  IPlugConvoEngine-vst3.vcxproj.filters  IPlugConvoEngine.cpp  resource.h
IPlugExamples/IPlugConvoEngine/IPlugConvoEngine.xcodeproj/: project.pbxproj
IPlugExamples/IPlugConvoEngine/app_wrapper/: app_main.h
IPlugExamples/IPlugDistortion/: CMakeLists.txt  IPlugDistortion-aax.vcxproj.filters  IPlugDistortion-rtas.vcxproj.filters  IPlugDistortion-vst2.vcxproj.filters  IPlugDistortion-vst3.vcxproj.filters  IPlugDistortion.cpp  resource.h
IPlugExamples/IPlugDistortion/app_wrapper/: app_main.h
IPlugExamples/IPlugEEL/: CMakeLists.txt  IPlugEEL-aax.vcxproj.filters  IPlugEEL-rtas.vcxproj.filters  IPlugEEL-vst2.vcxproj.filters  IPlugEEL-vst3.vcxproj.filters  IPlugEEL.cpp  IPlugEEL.h  resource.h
IPlugExamples/IPlugEEL/app_wrapper/: app_main.h
IPlugExamples/IPlugEffect/: CMakeLists.txt  IPlugEffect-aax.vcxproj.filters  IPlugEffect-rtas.vcxproj.filters  IPlugEffect-vst2.vcxproj.filters  IPlugEffect-vst3.vcxproj.filters  IPlugEffect.cpp  resource.h
IPlugExamples/IPlugEffect/app_wrapper/: app_main.h
IPlugExamples/IPlugGUIResize/: CMakeLists.txt  IPlugGUIResize-aax.vcxproj.filters  IPlugGUIResize-rtas.vcxproj.filters  IPlugGUIResize-vst2.vcxproj.filters  IPlugGUIResize-vst3.vcxproj.filters  IPlugGUIResize.cpp  resource.h
IPlugExamples/IPlugGUIResize/app_wrapper/: app_main.cpp  app_main.h
IPlugExamples/IPlugHostDetect/: CMakeLists.txt  IPlugHostDetect-aax.vcxproj.filters  IPlugHostDetect-rtas.vcxproj.filters  IPlugHostDetect-vst2.vcxproj.filters  IPlugHostDetect-vst3.vcxproj.filters  IPlugHostDetect.cpp  resource.h
IPlugExamples/IPlugHostDetect/app_wrapper/: app_main.cpp  app_main.h
IPlugExamples/IPlugMonoSynth/: CMakeLists.txt  IPlugMonoSynth-aax.vcxproj.filters  IPlugMonoSynth-rtas.vcxproj.filters  IPlugMonoSynth-vst2.vcxproj.filters  IPlugMonoSynth-vst3.vcxproj.filters  IPlugMonoSynth.h  resource.h
IPlugExamples/IPlugMonoSynth/app_wrapper/: app_main.h
IPlugExamples/IPlugMouseTest/: CMakeLists.txt  IPlugMouseTest-aax.vcxproj.filters  IPlugMouseTest-rtas.vcxproj.filters  IPlugMouseTest-vst2.vcxproj.filters  IPlugMouseTest-vst3.vcxproj.filters  IPlugMouseTest.cpp  IPlugMouseTestControls.h  IPlugMouseTestDSP.h  resource.h
IPlugExamples/IPlugMouseTest/app_wrapper/: app_dialog.cpp  app_dlg_main.cpp  app_main.h
IPlugExamples/IPlugMultiChannel/: CMakeLists.txt  IPlugMultiChannel-aax.vcxproj.filters  IPlugMultiChannel-rtas.vcxproj.filters  IPlugMultiChannel-vst2.vcxproj.filters  IPlugMultiChannel-vst3.vcxproj.filters  IPlugMultiChannel.cpp  resource.h
IPlugExamples/IPlugMultiChannel/app_wrapper/: app_main.cpp  app_main.h
IPlugExamples/IPlugMultiTargets/: CMakeLists.txt  IPlugMultiTargets-aax.vcxproj.filters  IPlugMultiTargets-rtas.vcxproj.filters  IPlugMultiTargets-vst2.vcxproj.filters  IPlugMultiTargets-vst3.vcxproj.filters  IPlugMultiTargets.cpp  IPlugMultiTargets.h  IPlugMultiTargets_controls.h  resource.h
IPlugExamples/IPlugMultiTargets/app_wrapper/: app_main.h
IPlugExamples/IPlugMultiTargets/ios_wrapper/: FlipsideViewController.mm  IPlugIOSAudio.h  IPlugIOSAudio.mm  IPlugMultiTargetsAppDelegate.mm  MainViewController.mm
IPlugExamples/IPlugOpenGL/: CMakeLists.txt  IPlugOpenGL-aax.vcxproj.filters  IPlugOpenGL-rtas.vcxproj.filters  IPlugOpenGL-vst2.vcxproj.filters  IPlugOpenGL-vst3.vcxproj.filters  IPlugOpenGL.cpp  resource.h
IPlugExamples/IPlugOpenGL/app_wrapper/: app_main.h
IPlugExamples/IPlugPlush/: CMakeLists.txt  IPlugPlush-aax.vcxproj.filters  IPlugPlush-rtas.vcxproj.filters  IPlugPlush-vst2.vcxproj.filters  IPlugPlush-vst3.vcxproj.filters  IPlugPlush.cpp  resource.h
IPlugExamples/IPlugPlush/app_wrapper/: app_main.h
IPlugExamples/IPlugPolySynth/: CMakeLists.txt  IPlugPolySynth-aax.vcxproj.filters  IPlugPolySynth-rtas.vcxproj.filters  IPlugPolySynth-vst2.vcxproj.filters  IPlugPolySynth-vst3.vcxproj.filters  IPlugPolySynth.cpp  IPlugPolySynth.h  IPlugPolySynthDSP.h  resource.h
IPlugExamples/IPlugPolySynth/app_wrapper/: app_main.h
IPlugExamples/IPlugResampler/: CMakeLists.txt  IPlugResampler-aax.vcxproj.filters  IPlugResampler-rtas.vcxproj.filters  IPlugResampler-vst2.vcxproj.filters  IPlugResampler-vst3.vcxproj.filters  IPlugResampler.cpp  IPlugResampler.h  resource.h
IPlugExamples/IPlugResampler/app_wrapper/: app_main.cpp  app_main.h
IPlugExamples/IPlugSideChain/: CMakeLists.txt  IPlugSideChain-aax.vcxproj.filters  IPlugSideChain-rtas.vcxproj.filters  IPlugSideChain-vst2.vcxproj.filters  IPlugSideChain-vst3.vcxproj.filters  IPlugSideChain.cpp  IPlugSideChain_Controls.h  resource.h
IPlugExamples/IPlugSideChain/app_wrapper/: app_dialog.cpp  app_main.h
IPlugExamples/IPlugText/: CMakeLists.txt  IPlugText-aax.vcxproj.filters  IPlugText-rtas.vcxproj.filters  IPlugText-vst2.vcxproj.filters  IPlugText-vst3.vcxproj.filters  IPlugText.cpp  IPlugText.h  resource.h
IPlugProjects/: CMakeLists.txt
VST3_SDK/: CMakeLists.txt  readme.txt
contribs/DSP/: CMakeLists.txt
contribs/ogg/: CMakeLists.txt
contribs/vorbis/: CMakeLists.txt
(+424 files in other folders)
