include (../cmake/IPlugProject.inc)

add_subdirectory(IPlugControls)
add_subdirectory(IPlugConvoEngine)
add_subdirectory(IPlugEffect)
add_subdirectory(IPlugPolySynth)
add_subdirectory(IPlugResampler)
if(WIN32)
add_subdirectory(IPlugChunks)
add_subdirectory(IPlugDistortion)
add_subdirectory(IPlugEEL)
add_subdirectory(IPlugGUIResize)
add_subdirectory(IPlugHostDetect)
add_subdirectory(IPlugMonoSynth)
add_subdirectory(IPlugMouseTest)
add_subdirectory(IPlugMultiChannel)
add_subdirectory(IPlugMultiTargets)
add_subdirectory(IPlugOpenGL)
add_subdirectory(IPlugPlush)
add_subdirectory(IPlugSideChain)
add_subdirectory(IPlugText)
endif()
